@@ -51,6 +51,7 @@ A Classic Fairytale:
  + Backstab: Disable utilities before traitor has been dealt with
  * Backstab: Prevent attacking the cannibals before making the choice
  * First blood: Fix Lua error when hitting Attack after failing the rope challenge
+ * The Shadow Falls: Fix Lua error when hog dies during choice phase
  * General: Clear hazards around cyborg when it appears in cut scenes
  * General: Disable Sudden Death for all missions
  * Various minor tweaks and bugfixes
